--- a/scss/main.scss
+++ b/scss/main.scss
@@ -56,6 +56,14 @@ $theme-colors: (
   {
     width: 50%;
   }
+  #carouselScreenshots
+  {
+    width: 50%;
+  }
+  #carouselScreenshots2
+  {
+    width: 50%;
+  }
 }
 
 #BookBody {
